--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Cal+Sans&family=Geologica:wght@100..900&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Cal+Sans&family=Geologica:wght@100..900&family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap"
       rel="stylesheet"
     />
   </head>
