--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>termdo</title>
-    <!-- index.html -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Cal+Sans&family=Geologica:wght@100..900&family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="/fonts/_fonts.css" />
   </head>
   <body>
     <div id="root"></div>
